Saving all data fields now.

--- a/j7.kv
+++ b/j7.kv
@@ -2,6 +2,7 @@
 #: include home_screen.kv
 #: include patient_screen.kv
 #: include patient_view.kv
+#: include scan_view.kv
 #: include scan_screen.kv
 #: include summary_screen.kv
 #: import ScreenManager kivy.uix.screenmanager.ScreenManager
